--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,7 @@ h1 {
 h1 h2 h3{
 	font-family:'Georgia', Times, Times New Roman, serif;
 	text-align: center;
+	font-size: 24px;
 }
 nav {
 	margin-top: 30px;
@@ -62,21 +63,6 @@ nav a:active {
 	padding-bottom: 10px;
 	margin-right: 45px;
 }
-#sideBarAbout h3 {
-	color:#4aaaa5;
-	padding-bottom: 5px;
-	margin-left: 20px;
-}
-#sideBarContact h3 {
-	color:#4aaaa5;
-	padding-bottom: 5px;
-	margin-left: 20px;
-}
-#sideBarPort h3 {
-	color:#4aaaa5;
-	padding-bottom: 5px;
-	margin-left: 20px;
-}
 #portLink {
 	border-right: 2px solid lightgrey;
 	border-left: 2px solid lightgrey;
@@ -100,7 +86,7 @@ nav a:active {
 	clear: both;
 	background-color: #ffffff;
 	border:1px solid #dddddd;
-	width:200px;
+	width:225px;
 	position: relative;
 	bottom:395px;
 	left:700px;
@@ -116,7 +102,7 @@ nav a:active {
 	clear: both;
 	background-color: #ffffff;
 	border:1px solid #dddddd;
-	width:200px;
+	width:225px;
 	position: relative;
 	bottom:430px;
 	left:700px;
@@ -132,7 +118,7 @@ nav a:active {
 	clear: both;
 	background-color: #ffffff;
 	border:1px solid #dddddd;
-	width:200px;
+	width:225px;
 	position: relative;
 	bottom:828px;
 	left:700px;
@@ -188,7 +174,7 @@ nav a:active {
 	position: relative;
 	top:85px;
 	font-size: 18px;
-	text-align: center;
+	padding-right: 5px;
 }
 #hang {
 	position:relative;
@@ -214,4 +200,17 @@ nav a:active {
 	position:relative;
 	top:-175px;
 	left:75px;
+}
+#centerIcon {
+	margin-left: 6px;
+}
+h3{
+	font-size:24px;
+	border-bottom: 5px solid #dddddd;
+	margin-right: 5px;
+	margin-left: 5px;
+    text-align: center;
+    margin-top: 10px;
+    padding-bottom: 12px;
+    
 }
