--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,8 +120,12 @@ nav a:active {
 #content input {
 	margin:0 0 10px 45px;
 }
-#content p {
-	padding:0 40px 0 45px;
+.fatTitle {
+	padding:15px 40px 0 20px;
+	white-space: nowrap;
+}
+.smallTitle {
+	padding:12px 40px 0 55px;
 }
 #content textarea {
 	margin:0 0 0 45px;
@@ -133,22 +137,19 @@ nav a:active {
 }
 .box p {
 	color:white;
-	background-color:#4aaaa5;
-	width:115px;
-	height:40px;
-	position: relative;
-	top:75px;
 	font-size: 18px;
-	padding-right: 5px;
+
 }
 #hang {
 	float: left;
 	margin-left: 47px;
     margin-right: 15px;
     margin-bottom: 45px;
+    background-image:url('../images/place1.jpg');
 }
 #rpg {
 	float:left;
+	background-image:url('../images/place2.jpg');
 
 }
 #trivia {
@@ -157,9 +158,11 @@ nav a:active {
 	margin-left: 47px;
     margin-right: 15px;
     margin-bottom: 45px;
+    background-image:url('../images/place3.jpg');
 }
 #rutgers {
 	float:left;
+	background-image:url('../images/place4.jpg');
 }
 #rock {
 	clear:both;
@@ -167,6 +170,7 @@ nav a:active {
 	margin-left: 47px;
     margin-right: 15px;
     margin-bottom: 45px;
+    background-image:url('../images/place5.jpg');
 }
 #centerIcon {
 	margin-left: 11px;
@@ -180,4 +184,15 @@ h3{
     margin-top: 18px;
     padding-bottom: 12px;
     
+}
+.titleBox {
+	background-color:#4aaaa5;
+	width:196px;
+	height:50px;
+	position: relative;
+	top:75px;
+	padding-right: 5px;
+}
+.textShift {
+	margin-left: 45px;
 }
