--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,7 +113,7 @@ nav a:active {
 	clear:both;
 }
 #backGround {
-	width:1100px;
+	width:1178px;
 	height:650px;
 	margin:auto;
 }
@@ -193,6 +193,9 @@ h3{
 	top:75px;
 	padding-right: 5px;
 }
-.textShift {
-	margin-left: 45px;
+.contactText {
+	margin:0 40px 10px 45px;
+}
+#mainText {
+	margin:0 40px 10px 28px;
 }
