--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,40 +1,48 @@
+.screenRuler {
+	width: 100%;
+  	max-width: 960px;
+  	margin: 0 auto;
+  	clear: both;
+}
+* {
+  	box-sizing: border-box;
+}
+
 body {
-	color:#777777;
+	color:#777;
 	font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-	background-color: black;
-	margin:0;
+	background-image: url('../images/back.png');
+	font-size:18px;	
 }
-footer {
-	clear:both;
+.topBar{
+	position:fixed;
+	z-index: 99;
 	width:100%;
-	height: 90px;
-	background-color: #666666;
-	border-top: 10px solid #4aaaa5;
-	color:lightgrey;
+	overflow: auto;
+	background-color: #fff;
+	color:#fff;
+	border-bottom: 2px solid #ccc;
 }
-footer p {
-	padding-left: 400px;
-	padding-top: 30px;
-	font-size: 10px;
-}
-h1 {
-	padding-left: 55px;
-	padding-top: 10px;
-	font-size: 24px;
-	color:white;	
-}
-h1 h2 h3{
-	font-family:'Georgia', Times, Times New Roman, serif;
-	text-align: center;
-	font-size: 24px;
+.topBox {
+	background-color:#4aaaa5 ;
+	width:300px;
+	height:90px;
+	float:left;
+	font-family: Georgia, Times, "Times New Roman", serif;
+  	font-size: 30px;
+  	color:#fff;
+  	text-align: center;
+  	text-decoration: none;
+  	font-weight: bolder;
+  	line-height: 90px;
 }
 nav {
 	margin-top: 30px;
-	margin-right: 150px;
 	float:right;
 }
 nav a:link{
 	color:#A7B8C9;
+	display: inline-block;
 	text-decoration: none;
 }
 nav a:visited{
@@ -49,21 +57,7 @@ nav a:active {
 	color:green;
 	text-decoration: underline;
 }
-#topBox {
-	background-color:#4aaaa5 ;
-	width:300px;
-	height:85px;
-	margin:0 0 0 130px;
-	float:left;
-}
-#content h2 {
-	color:#4aaaa5;
-	margin-left: 45px;
-	border-bottom: 5px solid #dddddd;
-	padding-bottom: 10px;
-	margin-right: 37px;
-}
-#portLink {
+.portLink {
 	border-right: 2px solid lightgrey;
 	border-left: 2px solid lightgrey;
 	padding-left: 10px;
@@ -71,70 +65,85 @@ nav a:active {
 	margin-right: 10px;
 	margin-left: 10px;
 }
-#topBar{
-	padding:0;
-	margin:0;
-	background-color: #ffffff;
-}
-#wrapper {
-	clear:both;
-	border-top: 3px solid #dddddd;
-	background-image: url('../images/back.png');
-	background-color: white;
-}
-#sideBar {
-	background-color: #ffffff;
-	border:1px solid #dddddd;
-	width:225px;
+.content {	
+	padding: 30px;
+  	margin: 125px 0 40px;
+	background-color: #fff;
+	border:1px solid #ddd;
+	width:100%;
+	max-width:650px;
 	float:left;
-	overflow: none;
-	color:#4aaaa5;
-	margin:50px 0 0 0; 
 }
-#sideBar img{
-	height:25%;
-	width:25%;
-	padding: 6px;
+h2{
+	font-family:'Georgia', Times, Times New Roman, serif;
+	font-size: 30px;
+	color:#4AAAA5;
+	font-weight: bold;
 }
-#content {
-	
-	background-color: #ffffff;
-	border:1px solid #dddddd;
-	width:534px;
-	float:left;
-	margin: 50px 50px 50px 125px;
-}
-#mainImage {
-	float:left;
-	height: 50%;
-	width: 50%;
-}
-#secondaryImage {
-	float:left;
-	height: 50%;
-	width: 50%;
-}
-#mainImage p {
-	clear:both;
-}
-#backGround {
-	width:960px;
-	height:650px;
-	margin:auto;
-}
-#content input {
-	margin:0 0 10px 45px;
-}
-.fatTitle {
-	padding:15px 40px 0 20px;
+h3{
+	font-family:'Georgia', Times, Times New Roman, serif;
+	font-size: 24px;
+	color:#4AAAA5;
+	font-weight: bold;
 	white-space: nowrap;
 }
-.smallTitle {
-	padding:12px 40px 0 55px;
+
+.mainText {
+	margin:0 10px 10px 10px;
 }
-#content textarea {
-	margin:0 0 0 45px;
-} 
+.mainImage {
+	float:left;
+	height: auto;
+	width: 200px;
+	margin: 20px 20px 0 0;
+}
+.sideBar {
+	background-color: #fff;
+	border:1px solid #ddd;
+	width:100%;
+	max-width:270px;
+	float:right;
+	color:#4aaaa5;
+	margin: 125px 0 0 0;
+	padding: 30px;
+ 
+}
+.sideBarImage{
+	height:auto;
+	width:54px;
+	padding: 6px;
+}
+.centerIcon {
+	margin-left: 20px;
+}
+footer {
+	clear:both;
+	font-size: 12px;
+	background-color: #666;
+	border-top: 8px solid #4aaaa5;
+	color:#fff;
+	text-align: center;
+	padding: 30px;
+}
+.moveRight {
+	margin-left: 174px;
+    margin-top: 25px;
+}
+.moveRight p {
+	margin:5px 0 5px 0;
+}
+.titleBox {
+	background-color:#4aaaa5;
+	width:200px;
+	height:50px;
+	position: relative;
+	top:87px;
+	padding-right: 5px;
+}
+/*Portfolio*/
+#boxSet {
+	margin-top: 25px;
+}
 .box {
 	width: 200px;
 	height: 150px;
@@ -177,30 +186,218 @@ nav a:active {
     margin-bottom: 45px;
     background-image:url('../images/place5.jpg');
 }
-#centerIcon {
-	margin-left: 11px;
+.smallTitle {
+	padding:12px 40px 0 55px;
 }
-h3{
-	font-size:24px;
-	border-bottom: 5px solid #dddddd;
-	margin-right: 5px;
-	margin-left: 5px;
-    text-align: center;
-    margin-top: 18px;
-    padding-bottom: 12px;
-    
+.fatTitle {
+	padding:15px 40px 0 20px;
+	white-space: nowrap;
 }
-.titleBox {
-	background-color:#4aaaa5;
-	width:195px;
-	height:50px;
-	position: relative;
-	top:75px;
-	padding-right: 5px;
+
+/*This Section will contain my media queries
+which will control the responsiveness of the page*/
+/*
+@media screen and (max-width: 980px) {
+	nav {
+		margin-right: 131px;
+	}
+	#content {
+		width:350px;
+		margin-right: 25px;
+	}
+		#hang {
+		clear:both;
+		float: left;
+		margin-left: 84px;
+		margin-bottom: 45px;
+	}
+	#rpg {
+		clear:both;
+		float: left;
+		margin-left: 84px;
+		margin-bottom: 45px;
+	}
+	#trivia {
+		clear:both;
+		float: left;
+		margin-left: 84px;
+		margin-bottom: 45px;
+	}
+	#rutgers {
+		clear:both;
+		float: left;
+		margin-left: 84px;
+		margin-bottom: 45px;
+	}
+	#rock {
+		clear:both;
+		float: left;
+		margin-left: 84px;
+		margin-bottom: 45px;
+	}
+	
+	#topBox {
+		width:250px;
+	}
+	h1 {
+		padding-left: 35px;
+	}
+	#mainText {
+		clear:both;
+	}
+	#mainImage {
+		clear:left;
+		margin-left: 80px;
+	}
+	.moveRight {
+		margin-left:2px;
+	}
 }
-.contactText {
-	margin:0 40px 10px 45px;
+@media screen and (max-width: 768px) {
+	#sideBar {
+		clear:both;
+		margin-left: 55px;
+    	margin-bottom: 25px;
+    	margin-top: 0;
+    	width:100%;
+    	max-width: 544px;
+	}
+	nav {
+		margin-right: 36px;
+	}
+	#content {
+		margin-left: 55px;
+    	width:100%;
+    	max-width: 544px;
+	}
+	#centerIcon {
+		margin-left: 108px;
+	}
+	#topBox{
+		margin-left: 56px;
+	}
+	#backGround {
+		width: 768px;
+	}
+	footer p {
+		margin-left: -100px;
+		margin-bottom: 50px;
+	}
+	#hang {
+		float: left;
+		margin-left: 53px;
+	    margin-right: 50px;
+	    margin-bottom: 45px;
+	    background-image:url('../images/place1.jpg');
+	}
+	#rpg {
+		float:left;
+		background-image:url('../images/place2.jpg');
+
+	}
+	#trivia {
+		clear:both;
+		float:left;
+		margin-left: 53px;
+	    margin-right: 50px;
+	    margin-bottom: 45px;
+	    background-image:url('../images/place3.jpg');
+	}
+	#rutgers {
+		float:left;
+		background-image:url('../images/place4.jpg');
+	}
+	#rock {
+		clear:both;
+		float:left;
+		margin-left: 53px;
+	    margin-right: 50px;
+	    margin-bottom: 45px;
+	    background-image:url('../images/place5.jpg');
+	}
+	.moveRight {
+		margin-left:121px ;
+	}
 }
-#mainText {
-	margin:0 40px 10px 28px;
-}
+
+@media screen and (max-width: 640px) {
+	nav {
+		clear: both;
+    	margin-right: 109px;
+    	margin-bottom: 18px;
+	}
+
+	#content {
+		margin-left:130px;
+		width:100%;
+		max-width:400px;
+	}
+	#sideBar {
+		margin-left: 130px;
+		width:100%;
+		max-width:400px;
+	}
+	#topBox {
+		width:100%;
+		margin-left:0;
+	}
+	#topBox h1 {
+		margin-left: 163px;
+    	font-size: 30px;
+	}
+	#mainText {
+		clear:both;
+		font-size: 18px;
+	}
+	#mainImage {
+		width:75%;
+		height:75%;
+		margin-left: 54px;
+		margin-bottom: 25px;
+	}
+	footer p {
+		margin-left: -129px;
+		margin-bottom: 50px;
+	}
+	#hang {
+		clear:both;
+		float: left;
+		margin-left: 109px;
+		margin-bottom: 45px;
+	}
+	#rpg {
+		clear:both;
+		float: left;
+		margin-left: 109px;
+		margin-bottom: 45px;
+	}
+	#trivia {
+		clear:both;
+		float: left;
+		margin-left: 109px;
+		margin-bottom: 45px;
+	}
+	#rutgers {
+		clear:both;
+		float: left;
+		margin-left: 109px;
+		margin-bottom: 45px;
+	}
+	#rock {
+		clear:both;
+		float: left;
+		margin-left: 109px;
+		margin-bottom: 45px;
+	}
+	#portLink {
+		border:none;
+		padding-left:100px;
+		padding-right: 100px;
+	}
+	.moveRight {
+		margin-left:4px;
+	}
+	#centerIcon {
+		margin-left: 61px;
+	}
+}*/
